; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_continue_stmt.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_continue_stmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lcontinue = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"stray continue statement\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @read_continue_stmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_continue_stmt(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @expect(i8 signext 59)
  %4 = load i32, i32* @lcontinue, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @errort(i32* %7, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32, i32* @lcontinue, align 4
  %11 = call i32* @ast_jump(i32 %10)
  ret i32* %11
}

declare dso_local i32 @expect(i8 signext) #1

declare dso_local i32 @errort(i32*, i8*) #1

declare dso_local i32* @ast_jump(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
